[gd_scene load_steps=2 format=3 uid="uid://dnoh7ja2wmkxn"]

[ext_resource type="Script" path="res://game/ui/main_menu/main_menu.gd" id="1_s8w6r"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s8w6r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.34

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "The Language Scrapbook
"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"TooltipLabel"
text = "Acquire a language by doing tasks."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.85
theme_override_font_sizes/font_size = 14
text = "Anonymous learning data is collected for research purposes. No personal information is stored. By playing, you agree to this."
autowrap_mode = 2

[node name="LoadCredits" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Show Credits"

[node name="ChangeLangButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Switch Language"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LoadCredits" to="." method="_on_load_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ChangeLangButton" to="." method="_on_change_lang_button_pressed"]
